--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Longbin Lai"
   avatar           : "profile.png"
-  bio              : "I am now a PostDoc researcher in Database Group, UNSW, Sydney. My interests include graph algorithms, database system and management, distributed data engines."
+  bio              : "I am now a PostDoc in the Database group, UNSW, Sydney. My interests include graph algorithms, database system and management, distributed data engines."
   location         : "Sydney, Australia"
   employer         :
   googlescholar    : "https://scholar.google.com.au/citations?user=iz2jcMYAAAAJ&hl=en"
